deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omabank-api
  labels:
    app: omabank-api
    tier: backend
    sec-zone: trusted
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: omabank-api
  template:
    metadata:
      labels:
        app: omabank-api
    spec:
      serviceAccountName: omabank-api-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: api-container
        image: omabankacrdev923.azurecr.io/omabank-api:42
        imagePullPolicy: Always
        
        # Health Probes
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        
        # 100% Zero-Trust: Injects the dynamically generated secret from ESO
        ports:
        - containerPort: 8000
          name: http-api
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 65532
          runAsGroup: 65532
          capabilities:
            drop:
            - ALL
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
        volumeMounts:
        - mountPath: /tmp
          name: ephemeral-tmp
      volumes:
      - name: ephemeral-tmp
        emptyDir: {}
