worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omabank-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: omabank-worker
  template:
    metadata:
      labels:
        app: omabank-worker
    spec:
      serviceAccountName: omabank-api-sa
      containers:
      - name: worker-container
        image: omabankacrdev923.azurecr.io/omabank-api:latest
        imagePullPolicy: Always

        command: ["/usr/local/bin/python", "-m", "celery", "-A", "src.worker.celery_app.celery_instance", "worker", "--loglevel=info", "--pool=solo"]

        # Inject the database password from Key Vault
        resources:
          limits:
            memory: "256Mi"
            cpu: "250m"
