redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: omabank-redis-service
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: omabank-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omabank-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: omabank-redis
  template:
    metadata:
      labels:
        app: omabank-redis
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: redis
        image: redis:7-alpine
        ports:
        - containerPort: 6379
        resources:
          requests:             
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          runAsNonRoot: true
          runAsUser: 999
          capabilities:
            drop:
            - ALL
