service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omabank-api-service
  labels:
    app: omabank-api
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: omabank-api
